[tool.poetry]
name = "vision_etl"
version = "0.0.1"
description = ""
authors = ["russlooker <russell@looker.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
img2pdf = "^0.4.0"
Faker = "^7.0.1"
Pillow = "^8.2.0"
google-cloud-storage = "^1.37.0"
google-cloud-bigquery = "^2.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
